refactor: remove put endpoints
